@startuml
abstract class Transaccion{
  getTipo()
  getCantidad()
  getdescripcion()
  getFecha()

}

class Gasto {
  Valor: float
  Fecha: Date
  Descripcion: str

  getTipo()
  getCantidad()
  getdescripcion()
  getFecha()
}

class Movimiento {
  NomCat: str
  Mod: str
  Valor: float
  Fecha: Date
  Descripcion: str

  getTipo()
  getMod()
  getCantidad()
  getNomCat()
  getdescripcion()
  getFecha()
}



class Ingreso {
  Valor: float
  Fecha: Date
  Descripcion: str

  getTipo()
  getCantidad()
  getdescripcion()
  getFecha()
}

class GHormiga {
  Valor: float
  Fecha: Date
  Descripcion: str

  getCantidad()
  getdescripcion()
  getFecha()
}

class Registro {
  Registros: List[Transaccion]
 

  addTransaccion()
  getRegistros()
}

class Categoria {
  parent
  Nombre: str
  Descripcion: str
  Saldo: float

  nwIngreso()
  nwGasto()
  getRegistro()
  

}

class Principal {
  listCategorias: List[Categoria]
  listGHormiga: List[GHormiga]
  Libre : float
  

  nwIngreso()
  nwGasto()
  nwMovimiento()
  CrearCategoria()
  EliminarCategoria()
  getListCategorias()
  getCategoria()
  getRegistros()
  nwGHormiga()
  getGHormigas()
}

Transaccion <|-- Gasto
Transaccion <|-- Ingreso
Transaccion <|-- Movimiento

Registro "1" -- "0..*"Transaccion
Categoria "1" o-- "regCategoria" Registro
Principal "1" -- "0..*" GHormiga
Principal "1" -- "0..*" Categoria
Principal "1" o-- "regPrincipal" Registro

@enduml
